ui/theme/src/css/notes.css
.callout {
	@apply text-black dark:text-white;

	background: oklch(from var(--color-yellow-100) l c h / 40%);

	.dark & {
		background: oklch(from var(--color-yellow-500) l c h / 40%);
	}
}

.note {
	@apply grid leading-6 gap-y-24; 

	& h1 {
		@apply text-title font-bold text-balance;
	}

	& h2 {
		@apply text-heading font-bold;
	}

	& ul {
		@apply list-disc pl-24;
	}

	& table {
		@apply mx-8 text-small table-fixed border-collapse 
			border-1 border-solid border-grey-300 text-grey-900;

		max-width: calc(var(--max-width) - 16px);
		background: oklch(from var(--color-grey-100) l c h / 80%);
	}

	& tr {
		@apply border-0 border-b-1 border-solid border-grey-300;
	}

	& td {
		@apply border-0 py-4 px-8 border-r-1 border-solid border-grey-300;
	}

	& thead {
		@apply text-grey-600 text-left;

		& th {
			@apply font-bold p-8 border-grey-300 border-0 border-r-1 border-solid;
		}

		& th:last-child {
			@apply border-none;
		}
	}

	& pre {
		@apply py-8 text-caption rounded
			overflow-scroll w-full;

		overscroll-behavior-x: contain;
		tab-size: 4ch;
		scroll-padding-inline: 1rem;
		
		& code {
			@apply block w-fit p-inline-8;
		}
	}

	& .code {
		@apply bg-grey-50 dark:bg-grey-900 py-24 grid grid-cols-subgrid gap-24;

		grid-column: 1 / -1;
	}

	& code:not(pre code) {
		@apply bg-grey-200 px-4 rounded text-black;
	}

	& .callout {
		@apply py-24 grid grid-cols-subgrid gap-24;

		grid-column: 1 / -1;

		& :last-child {
			@apply mb-0;
		}
	}

	& img {
		@apply max-w-full;
	}
}

